--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">Jul 2021 - Present</div>
+                            <div class="timeline-date">Jul 2021 - OCt 2022</div>
                             <h2>Php Developer</h2>
                             <h4>Spinnaker Analytics, Andheri, Mumbai</h4>
                             <p>
