--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="timeline">
+                    <div class="timeline-item left wow slideInRight" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">Jul 2021 - OCt 2022</div>
+                            <h2>Php Developer</h2>
+                            <h4>Spinnaker Analytics, Andheri, Mumbai</h4>
+                            <p>
+                                Develop many websites on Laravel, Angular and Core PHP.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Job Experience End -->
