--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <p>I'm</p>
                                 <h1>Rutuja Parab</h1>
                                 <h2></h2>
-                                <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
+                                <div class="typed-text">Front End Developer, Laravel Developer, Backend Developer, Database Developer, Web Designer, Web Developer </div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="#contact">Hire Me</a>
@@ -111,10 +111,16 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Full Stack Developer</p><p>65%</p>
+                                    <p>Backend Developer</p><p>85%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Full Stack Developer</p><p>75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -139,7 +145,7 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Web Design</h3>
+                                <h3>Backend Development</h3>
                                 
                             </div>
                         </div>
@@ -193,8 +199,18 @@
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">Jul 2021 - OCt 2022</div>
-                            <h2>Php Developer</h2>
+                            <div class="timeline-date">November 2021 - Present</div>
+                            <h2>Backend Developer</h2>
+                            <h4>Transpost Technologies, Andheri, Mumbai</h4>
+                            <p>
+                                Develop API and internal CRM with frontend and backend in laravel.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">July 2021 - October 2022</div>
+                            <h2>PHP Developer</h2>
                             <h4>Spinnaker Analytics, Andheri, Mumbai</h4>
                             <p>
                                 Develop many websites on Laravel, Angular and Core PHP.
@@ -247,14 +263,14 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>BIA Website</h3>
-                                <a class="btn" href="https://www.bostoninstituteofanalytics.org" data-lightbox="portfolio">+</a>
+                                <a class="btn" href="https://www.bostoninstituteofanalytics.org/" data-lightbox="portfolio">+</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-1.jpg" alt="Image">
+                                <img src="img/movierecommendationsystem.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3 style="font-size:14px;">Movie Recommendation System</h3>
@@ -265,7 +281,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-2.jpg" alt="Image">
+                                <img src="img/MMS.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3 style="font-size:14px;">Museum Mangement System</h3>
